other/add-configmap-ownerreference/.chainsaw-test/configmap-good.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-configmap
  namespace: default
data:
  key1: value1
  key2: value2
