other/add-configmap-ownerreference/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-configmap-ownerreference
spec:
  mutateExistingOnPolicyUpdate: false
