other/add-configmap-ownerreference/.chainsaw-test/chainsaw-step-02-assert-1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-configmap
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    kind: ReplicaSet
    name: test-replicaset
    controller: false
    blockOwnerDeletion: false
