other/add-configmap-ownerreference/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-configmap-ownerreference
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-configmap-ownerreference.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: add-configmap-ownerreference
          spec:
            mutateExistingOnPolicyUpdate: false
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: configmap-good.yaml
    - apply:
        file: replicaset-with-configmap.yaml
    - sleep:
        duration: 2s
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        file: replicaset-without-configmap.yaml
